--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,26 +1,40 @@
-  
-    <form (ngSubmit)="submitQuote()" #form="ngForm">
+<form (ngSubmit)="submitQuote()" #form="ngForm">
+  <div class="form group">
+    <label for="sender">sender:</label>
+    <input
+      id="sender"
+      type="text"
+      class="forum-control"
+      name="sender"
+      [(ngModel)]="newQuote.sender"
+      #sender="ngModel"
+    />
+  </div>
+  <br />
+  <div class="form group">
+    <label for="author">Author:</label>
+    <input
+      id="author"
+      type="text"
+      class="forum-control"
+      name="author"
+      [(ngModel)]="newQuote.author"
+      #author="ngModel"
+    />
+  </div>
+  <br />
+  <div class="comment">
+    <label for="comment">Quote:</label>
+    <textarea
+      id="comment"
+      cols="30"
+      rows="10"
+      class="form-control"
+      name="comment"
+      [(ngModel)]="newQuote.comment"
+      #comment="ngModel"
+    ></textarea>
+  </div>
 
-      <div class="form group">
-        <label for="firstName">Author:</label>
-        <input id="firstName" type="text" class="forum-control" />
-      </div>
-      <br />
-      <div class="form group">
-        <label for="firstName">Name:</label>
-        <input id="firstName" type="text" class="forum-control" />
-      </div>
-      <br />
-      <div class="comment">
-        <label for="comment">Quote:</label>
-        <textarea
-          name=""
-          id="comment"
-          cols="30"
-          rows="10"
-          class="form-control"
-        ></textarea>
-      </div>
-
-      <button class="btn btn-info">Submit</button>
-    </form>
+  <button class="btn btn-info">Submit</button>
+</form>
